--- a/index.html
+++ b/index.html
@@ -148,3 +148,8 @@
       else status = "He's gone. Ending 2/4: Is surrendering the same as losing?";
       document.getElementById('ekgText').innerText = "" + status;
     });
+
+    animate();
+  </script>
+</body>
+</html>
