--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       else if (tapCount < 4) status = "“Are you afraid, Dad. Are you having a nightmare?”";
       else if (tapCount < 6) status = "He clenched my hands.";
       else if (tapCount < maxTaps) status = "\u00A0\u00A0\u00A0\u00A0The monitor started to flash red warning lights, my dad's clench became even tighter. 'Dad!', I shouted, trying to signal someone for help. I was stuck, he had taken grasp of me. 'Dad, let go! We still have a chance. Please!' The monitor began to flash more rapidly, I depserately searched around the room, trying to find anyway to save him. Nothing. 'Stop!', I yelled even louder than the first time. The beeping became more intense, clawing at my ears until...";
-      else status = "He's gone. Ending 2/4: Is surrendering the same as losing?";
+      else status = "He's gone. Ending 2/4: Is surrendering the same as losing? Restart Link: https://sites.google.com/view/the-darkness-evergrowing-/home";
       document.getElementById('ekgText').innerText = "" + status;
     });
 
